--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: c
 
-# Default environment: Ubuntu Trusty 14.04.
+# Default environment: Ubuntu Bionic 18.04.
 os: linux
-dist: trusty
+dist: bionic
 
 # Default job task: run tests as defined in the $OPT environment variable.
 # Jobs can redefine the 'script' stage in the matrix below.
@@ -12,13 +12,12 @@ script: tools/run-tests.py $OPTS
 matrix:
   include:
     - name: "Checks"
-      install: pip install --user pylint==1.6.5
       script:
         - tools/run-tests.py --check-signed-off=travis --check-doxygen --check-vera --check-license --check-magic-strings --check-pylint
         - travis_wait 40 tools/run-tests.py --check-cppcheck
       addons:
         apt:
-          packages: [doxygen, cppcheck, vera++]
+          packages: [doxygen, cppcheck, vera++, pylint]
 
     - name: "Linux/x86-64 Build, Correctness & Debugger Tests"
       env:
@@ -70,22 +69,20 @@ matrix:
         - OPTS="--quiet --jerry-tests --jerry-test-suite --skip-list=parser-oom.js,parser-oom2.js,stack-limit.js,regression-test-issue-2190.js,regression-test-issue-2258-2963.js,regression-test-issue-2448.js,regression-test-issue-2905.js --buildoptions=--stack-limit=0,--compile-flag=-fsanitize=address,--compile-flag=-m32,--compile-flag=-fno-omit-frame-pointer,--compile-flag=-fno-common,--compile-flag=-O2,--debug,--system-allocator=on,--linker-flag=-fuse-ld=gold"
         - ASAN_OPTIONS=detect_stack_use_after_return=1:check_initialization_order=true:strict_init_order=true
         - TIMEOUT=600
-      compiler: gcc-5
       addons:
         apt:
           sources: ubuntu-toolchain-r-test
-          packages: [gcc-5, gcc-5-multilib]
+          packages: [gcc-multilib]
 
     - name: "UBSAN Tests"
       env:
         - OPTS="--quiet --jerry-tests --jerry-test-suite --skip-list=parser-oom.js,parser-oom2.js --buildoptions=--compile-flag=-fsanitize=undefined,--compile-flag=-m32,--compile-flag=-fno-omit-frame-pointer,--compile-flag=-fno-common,--debug,--system-allocator=on,--linker-flag=-fuse-ld=gold"
         - UBSAN_OPTIONS=print_stacktrace=1
         - TIMEOUT=600
-      compiler: gcc-5
       addons:
         apt:
           sources: ubuntu-toolchain-r-test
-          packages: [gcc-5, gcc-5-multilib]
+          packages: [gcc-multilib]
 
     - name: "Coverity Scan & SonarQube"
       env:
