Implement function name support for script functions and classes
JerryScript-DCO-1.0-Signed-off-by: Robert Fancsik frobert@inf.u-szeged.hu

--- a/jerry-core/lit/lit-magic-strings.ini
+++ b/jerry-core/lit/lit-magic-strings.ini
@@ -232,6 +232,7 @@ LIT_MAGIC_STRING_UNESCAPE = "unescape"
 LIT_MAGIC_STRING_WRITABLE = "writable"
 LIT_MAGIC_STRING_NEGATIVE_INFINITY_UL = "-Infinity"
 LIT_MAGIC_STRING_ARGUMENTS_UL = "Arguments"
+LIT_MAGIC_STRING_ANONYMOUS = "anonymous"
 LIT_MAGIC_STRING_CONSTRUCT = "construct"
 LIT_MAGIC_STRING_EVAL_ERROR_UL = "EvalError"
 LIT_MAGIC_STRING_INT8_ARRAY_UL = "Int8Array"
