Improve AArch64 support
- Adds a CMake toolchain file for AArch64 to help with cross compilation
- Tests the AArch64 build on Travis and runs the test suite using QEMU

JerryScript-DCO-1.0-Signed-off-by: Mátyás Mustoha mmatyas@inf.u-szeged.hu

--- a/.travis.yml
+++ b/.travis.yml
@@ -39,6 +39,15 @@ matrix:
         apt:
           packages: [gcc-arm-linux-gnueabihf, libc6-dev-armhf-cross, qemu-user-static]
 
+    - name: "Linux/AArch64 Cross Build & Correctness Tests"
+      env:
+        - OPTS="--quiet --jerry-tests --jerry-test-suite --toolchain=cmake/toolchain_linux_aarch64.cmake --buildoptions=--linker-flag=-static"
+        - RUNTIME=qemu-aarch64-static
+        - TIMEOUT=300
+      addons:
+        apt:
+          packages: [gcc-aarch64-linux-gnu, libc6-dev-arm64-cross, qemu-user-static]
+
     - name: "OSX/x86-64 Build, Correctness & Unit Tests"
       env:
         - OPTS="--quiet --jerry-tests --jerry-test-suite --unittests"
