Add --test262-es2015 option to run-tests.py
JerryScript-DCO-1.0-Signed-off-by: Csaba Osztrogonác oszi@inf.u-szeged.hu

--- a/.travis.yml
+++ b/.travis.yml
@@ -64,9 +64,13 @@ matrix:
         apt:
           packages: [gcc-multilib]
 
-    - name: "Conformance Tests"
+    - name: "Conformance Tests - ES5.1"
       env:
         - OPTS="--test262"
+
+    - name: "Conformance Tests - ES2015"
+      env:
+        - OPTS="--test262-es2015"
 
     - name: "Unit Tests"
       env:
