Use stringbuilder in ecma_builtin_helper_object_to_string
Also added steps 4-6 from ECMA-262 v6, 19.1.3.6

JerryScript-DCO-1.0-Signed-off-by: Adam Szilagyi aszilagy@inf.u-szeged.hu

--- a/jerry-core/lit/lit-magic-strings.ini
+++ b/jerry-core/lit/lit-magic-strings.ini
@@ -230,6 +230,7 @@ LIT_MAGIC_STRING_SUBARRAY = "subarray"
 LIT_MAGIC_STRING_TO_STRING_UL = "toString"
 LIT_MAGIC_STRING_UNESCAPE = "unescape"
 LIT_MAGIC_STRING_WRITABLE = "writable"
+LIT_MAGIC_STRING_OBJECT_TO_STRING_UL = "[object "
 LIT_MAGIC_STRING_NEGATIVE_INFINITY_UL = "-Infinity"
 LIT_MAGIC_STRING_ARGUMENTS_UL = "Arguments"
 LIT_MAGIC_STRING_ANONYMOUS = "anonymous"
