Improve test262 ES2015 runner
Changes:
 - Add options to the test runner to be able to update exclude list
 - Update the exclude list
 - Make Travis CI signal if the exclude list isn't up-to-date

JerryScript-DCO-1.0-Signed-off-by: Csaba Osztrogonác oszi@inf.u-szeged.hu

--- a/.travis.yml
+++ b/.travis.yml
@@ -67,7 +67,7 @@ matrix:
 
     - name: "Conformance Tests - ES2015"
       env:
-        - OPTS="--test262-es2015"
+        - OPTS="--test262-es2015 update"
 
     - name: "Unit Tests"
       env:
