--- a/jerry-core/lit/lit-magic-strings.ini
+++ b/jerry-core/lit/lit-magic-strings.ini
@@ -328,6 +328,7 @@ LIT_MAGIC_STRING_SET_UTC_MINUTES_UL = "setUTCMinutes"
 LIT_MAGIC_STRING_SET_UTC_SECONDS_UL = "setUTCSeconds"
 LIT_MAGIC_STRING_TO_EXPONENTIAL_UL = "toExponential"
 LIT_MAGIC_STRING_ARRAY_ITERATOR_UL = "Array Iterator"
+LIT_MAGIC_STRING_ASYNC_GENERATOR_UL = "AsyncGenerator"
 LIT_MAGIC_STRING_REFERENCE_ERROR_UL = "ReferenceError"
 LIT_MAGIC_STRING_DEFINE_PROPERTY_UL = "defineProperty"
 LIT_MAGIC_STRING_DELETE_PROPERTY_UL = "deleteProperty"
@@ -362,5 +363,6 @@ LIT_MAGIC_STRING_TO_LOCALE_TIME_STRING_UL = "toLocaleTimeString"
 LIT_MAGIC_STRING_GET_OWN_PROPERTY_NAMES_UL = "getOwnPropertyNames"
 LIT_MAGIC_STRING_PROPERTY_IS_ENUMERABLE_UL = "propertyIsEnumerable"
 LIT_MAGIC_STRING_GET_OWN_PROPERTY_SYMBOLS_UL = "getOwnPropertySymbols"
+LIT_MAGIC_STRING_ASYNC_GENERATOR_FUNCTION_UL = "AsyncGeneratorFunction"
 LIT_MAGIC_STRING_GET_OWN_PROPERTY_DESCRIPTOR_UL = "getOwnPropertyDescriptor"
 LIT_MAGIC_STRING__FUNCTION_TO_STRING = "function(){/* ecmascript */}"
