--- a/jerry-core/lit/lit-magic-strings.ini
+++ b/jerry-core/lit/lit-magic-strings.ini
@@ -319,6 +319,7 @@ LIT_MAGIC_STRING_FROM_CODE_POINT_UL = "fromCodePoint"
 LIT_MAGIC_STRING_IS_EXTENSIBLE = "isExtensible"
 LIT_MAGIC_STRING_TO_DATE_STRING_UL = "toDateString"
 LIT_MAGIC_STRING_TO_TIME_STRING_UL = "toTimeString"
+LIT_MAGIC_STRING_ASYNC_ITERATOR = "asyncIterator"
 LIT_MAGIC_STRING_GET_UTC_MINUTES_UL = "getUTCMinutes"
 LIT_MAGIC_STRING_GET_UTC_SECONDS_UL = "getUTCSeconds"
 LIT_MAGIC_STRING_IS_PROTOTYPE_OF_UL = "isPrototypeOf"
