New feature - Array.flat and Array.flatMap
JerryScript-DCO-1.0-Signed-off-by: bence gabor kis kisbg@inf.u-szeged.hu

--- a/jerry-core/lit/lit-magic-strings.ini
+++ b/jerry-core/lit/lit-magic-strings.ini
@@ -75,6 +75,7 @@ LIT_MAGIC_STRING_EVAL = "eval"
 LIT_MAGIC_STRING_EXEC = "exec"
 LIT_MAGIC_STRING_FILL = "fill"
 LIT_MAGIC_STRING_FIND = "find"
+LIT_MAGIC_STRING_FLAT = "flat"
 LIT_MAGIC_STRING_FROM = "from"
 LIT_MAGIC_STRING_IMUL = "imul"
 LIT_MAGIC_STRING_JOIN = "join"
@@ -185,6 +186,7 @@ LIT_MAGIC_STRING_BOOLEAN = "boolean"
 LIT_MAGIC_STRING_COMPILE = "compile"
 LIT_MAGIC_STRING_DEFAULT = "default"
 LIT_MAGIC_STRING_DOTALL = "dotAll"
+LIT_MAGIC_STRING_FLATMAP = "flatMap"
 LIT_MAGIC_STRING_FOR_EACH_UL = "forEach"
 LIT_MAGIC_STRING_GET_DATE_UL = "getDate"
 LIT_MAGIC_STRING_GET_INT8_UL = "getInt8"
