--- a/jerry-main/CMakeLists.txt
+++ b/jerry-main/CMakeLists.txt
@@ -60,6 +60,12 @@ if(JERRY_LIBFUZZER)
   target_link_libraries("jerry-libfuzzer" jerry-port-default -fsanitize=fuzzer)
 endif()
 
+# Jerry with fuzzilli support
+if(JERRY_FUZZILLI)
+  jerry_create_executable("jerry-fuzzilli" "fuzzilli.c")
+  target_link_libraries("jerry-fuzzilli" jerry-ext jerry-port-default)
+endif()
+
 # Jerry standalones
 if(JERRY_CMDLINE)
   jerry_create_executable("jerry" "main-unix.c" "cli.c")
