Implement String.padStart and String.padEnd
Based on: https://tc39.es/ecma262/#sec-string.prototype.padstart

JerryScript-DCO-1.0-Signed-off-by: Bela Toth tbela@inf.u-szeged.hu

--- a/jerry-core/lit/lit-magic-strings.ini
+++ b/jerry-core/lit/lit-magic-strings.ini
@@ -157,6 +157,7 @@ LIT_MAGIC_STRING_KEY_FOR = "keyFor"
 LIT_MAGIC_STRING_LENGTH = "length"
 LIT_MAGIC_STRING_NUMBER = "number"
 LIT_MAGIC_STRING_OBJECT = "object"
+LIT_MAGIC_STRING_PAD_END = "padEnd"
 LIT_MAGIC_STRING_RANDOM = "random"
 LIT_MAGIC_STRING_REDUCE = "reduce"
 LIT_MAGIC_STRING_REJECT = "reject"
@@ -189,6 +190,7 @@ LIT_MAGIC_STRING_INDEX_OF_UL = "indexOf"
 LIT_MAGIC_STRING_IS_ARRAY_UL = "isArray"
 LIT_MAGIC_STRING_MESSAGE = "message"
 LIT_MAGIC_STRING_OWN_KEYS_UL = "ownKeys"
+LIT_MAGIC_STRING_PAD_START = "padStart"
 LIT_MAGIC_STRING_REPLACE = "replace"
 LIT_MAGIC_STRING_RESOLVE = "resolve"
 LIT_MAGIC_STRING_REVERSE = "reverse"
