Implement Promise.prototype.onFinally
The algorith is based on ECMA-262 v11, 25.6.5.3

JerryScript-DCO-1.0-Signed-off-by: Adam Szilagyi aszilagy@inf.u-szeged.hu

--- a/jerry-core/lit/lit-magic-strings.ini
+++ b/jerry-core/lit/lit-magic-strings.ini
@@ -174,6 +174,7 @@ LIT_MAGIC_STRING_ENTRIES = "entries"
 LIT_MAGIC_STRING_TO_JSON_UL = "toJSON"
 LIT_MAGIC_STRING_VALUES = "values"
 LIT_MAGIC_STRING_BOOLEAN_UL = "Boolean"
+LIT_MAGIC_STRING_FINALLY = "finally"
 LIT_MAGIC_STRING_PROMISE_UL = "Promise"
 LIT_MAGIC_STRING_REFLECT_UL = "Reflect"
 LIT_MAGIC_STRING_SQRT1_2_U = "SQRT1_2"
