--- a/jerry-core/lit/lit-magic-strings.ini
+++ b/jerry-core/lit/lit-magic-strings.ini
@@ -285,6 +285,7 @@ LIT_MAGIC_STRING_SET_UTC_DATE_UL = "setUTCDate"
 LIT_MAGIC_STRING_STARTS_WITH = "startsWith"
 LIT_MAGIC_STRING_RESOURCE_ANON = "<anonymous>"
 LIT_MAGIC_STRING_ARRAY_BUFFER_UL = "ArrayBuffer"
+LIT_MAGIC_STRING_DESCRIPTION = "description"
 LIT_MAGIC_STRING_SYNTAX_ERROR_UL = "SyntaxError"
 LIT_MAGIC_STRING_UINT16_ARRAY_UL = "Uint16Array"
 LIT_MAGIC_STRING_UINT32_ARRAY_UL = "Uint32Array"
