--- a/jerry-core/lit/lit-magic-strings.ini
+++ b/jerry-core/lit/lit-magic-strings.ini
@@ -181,6 +181,7 @@ LIT_MAGIC_STRING_SQRT1_2_U = "SQRT1_2"
 LIT_MAGIC_STRING_BOOLEAN = "boolean"
 LIT_MAGIC_STRING_COMPILE = "compile"
 LIT_MAGIC_STRING_DEFAULT = "default"
+LIT_MAGIC_STRING_DOTALL = "dotAll"
 LIT_MAGIC_STRING_FOR_EACH_UL = "forEach"
 LIT_MAGIC_STRING_GET_DATE_UL = "getDate"
 LIT_MAGIC_STRING_GET_INT8_UL = "getInt8"
