Add promise rejection tracker support
JerryScript-DCO-1.0-Signed-off-by: Robert Fancsik frobert@inf.u-szeged.hu

--- a/jerry-ext/CMakeLists.txt
+++ b/jerry-ext/CMakeLists.txt
@@ -39,7 +39,8 @@ file(GLOB SOURCE_EXT
      debugger/*.c
      handle-scope/*.c
      handler/*.c
-     module/*.c)
+     module/*.c
+     promise/*.c)
 
 add_library(${JERRY_EXT_NAME} ${SOURCE_EXT})
 
