Improve source file handling in jerry-main
JerryScript-DCO-1.0-Signed-off-by: Dániel Bátyai daniel.batyai@h-lab.eu

--- a/jerry-main/CMakeLists.txt
+++ b/jerry-main/CMakeLists.txt
@@ -64,7 +64,7 @@ endif()
 
 # Jerry standalones
 if(JERRY_CMDLINE)
-  jerry_create_executable("jerry" "main-unix.c" "cli.c")
+  jerry_create_executable("jerry" "main-unix.c" "main-utils.c" "main-options.c" "cli.c")
   target_link_libraries("jerry" jerry-ext jerry-port-default)
 endif()
 
