Implement TrimStart TrimEnd and aliases
Based on: https://tc39.es/ecma262/#sec-string.prototype.trim

JerryScript-DCO-1.0-Signed-off-by: Bela Toth tbela@inf.u-szeged.hu

--- a/jerry-core/lit/lit-magic-strings.ini
+++ b/jerry-core/lit/lit-magic-strings.ini
@@ -206,6 +206,7 @@ LIT_MAGIC_STRING_SET_INT8_UL = "setInt8"
 LIT_MAGIC_STRING_SET_YEAR_UL = "setYear"
 LIT_MAGIC_STRING_SPECIES = "species"
 LIT_MAGIC_STRING_TO_FIXED_UL = "toFixed"
+LIT_MAGIC_STRING_TRIM_END = "trimEnd"
 LIT_MAGIC_STRING_UNICODE = "unicode"
 LIT_MAGIC_STRING_UNSHIFT = "unshift"
 LIT_MAGIC_STRING_VALUE_OF_UL = "valueOf"
@@ -236,6 +237,7 @@ LIT_MAGIC_STRING_SET_MONTH_UL = "setMonth"
 LIT_MAGIC_STRING_SET_UINT8_UL = "setUint8"
 LIT_MAGIC_STRING_SUBARRAY = "subarray"
 LIT_MAGIC_STRING_TO_STRING_UL = "toString"
+LIT_MAGIC_STRING_TRIM_LEFT = "trimLeft"
 LIT_MAGIC_STRING_UNESCAPE = "unescape"
 LIT_MAGIC_STRING_WRITABLE = "writable"
 LIT_MAGIC_STRING_OBJECT_TO_STRING_UL = "[object "
@@ -267,6 +269,8 @@ LIT_MAGIC_STRING_STRINGIFY = "stringify"
 LIT_MAGIC_STRING_SET_UINT16_UL = "setUint16"
 LIT_MAGIC_STRING_SET_UINT32_UL = "setUint32"
 LIT_MAGIC_STRING_SUBSTRING = "substring"
+LIT_MAGIC_STRING_TRIM_RIGHT = "trimRight"
+LIT_MAGIC_STRING_TRIM_START = "trimStart"
 LIT_MAGIC_STRING_UNDEFINED = "undefined"
 LIT_MAGIC_STRING_INT16_ARRAY_UL = "Int16Array"
 LIT_MAGIC_STRING_INT32_ARRAY_UL = "Int32Array"
