--- a/jerry-core/lit/lit-magic-strings.ini
+++ b/jerry-core/lit/lit-magic-strings.ini
@@ -347,6 +347,8 @@ LIT_MAGIC_STRING_SET_MILLISECONDS_UL = "setMilliseconds"
 LIT_MAGIC_STRING_DEFINE_PROPERTIES_UL = "defineProperties"
 LIT_MAGIC_STRING_MAX_SAFE_INTEGER_U = "MAX_SAFE_INTEGER"
 LIT_MAGIC_STRING_MIN_SAFE_INTEGER_U = "MIN_SAFE_INTEGER"
+LIT_MAGIC_STRING_DEFINE_GETTER = "__defineGetter__"
+LIT_MAGIC_STRING_DEFINE_SETTER = "__defineSetter__"
 LIT_MAGIC_STRING_BYTES_PER_ELEMENT_U = "BYTES_PER_ELEMENT"
 LIT_MAGIC_STRING_NEGATIVE_INFINITY_U = "NEGATIVE_INFINITY"
 LIT_MAGIC_STRING_POSITIVE_INFINITY_U = "POSITIVE_INFINITY"
