Implement BigInt primitve type and some of its operations
Supported operations:
- parse BigInt (decimal, hexadecimal, binary)
- toString with any radix between 2 and 36
- arithmetic operations: negate, add, subtract, multiply, divide, modulo
- left and right shift

JerryScript-DCO-1.0-Signed-off-by: Zoltan Herczeg zherczeg.u-szeged@partner.samsung.com

--- a/jerry-core/lit/lit-magic-strings.ini
+++ b/jerry-core/lit/lit-magic-strings.ini
@@ -132,6 +132,7 @@ LIT_MAGIC_STRING_THROW = "throw"
 LIT_MAGIC_STRING_TRUNC = "trunc"
 LIT_MAGIC_STRING_VALUE = "value"
 LIT_MAGIC_STRING_RESOURCE_EVAL = "<eval>"
+LIT_MAGIC_STRING_BIGINT_UL = "BigInt"
 LIT_MAGIC_STRING_LOG10E_U = "LOG10E"
 LIT_MAGIC_STRING_NUMBER_UL = "Number"
 LIT_MAGIC_STRING_OBJECT_UL = "Object"
@@ -139,6 +140,7 @@ LIT_MAGIC_STRING_REGEXP_UL = "RegExp"
 LIT_MAGIC_STRING_STRING_UL = "String"
 LIT_MAGIC_STRING_SYMBOL_UL = "Symbol"
 LIT_MAGIC_STRING_ASSIGN = "assign"
+LIT_MAGIC_STRING_BIGINT = "bigint"
 LIT_MAGIC_STRING_BUFFER = "buffer"
 LIT_MAGIC_STRING_CALLEE = "callee"
 LIT_MAGIC_STRING_CALLER = "caller"
