Implement String.prototype.replaceAll
The algorithm is based on ECMA-262 v12, 21.1.3.18

JerryScript-DCO-1.0-Signed-off-by: Adam Szilagyi aszilagy@inf.u-szeged.hu

--- a/jerry-core/lit/lit-magic-strings.ini
+++ b/jerry-core/lit/lit-magic-strings.ini
@@ -289,6 +289,7 @@ LIT_MAGIC_STRING_GET_SECONDS_UL = "getSeconds"
 LIT_MAGIC_STRING_GET_UTC_DATE_UL = "getUTCDate"
 LIT_MAGIC_STRING_IGNORECASE_UL = "ignoreCase"
 LIT_MAGIC_STRING_PARSE_FLOAT = "parseFloat"
+LIT_MAGIC_STRING_REPLACE_ALL = "replaceAll"
 LIT_MAGIC_STRING_SET_FLOAT_32_UL = "setFloat32"
 LIT_MAGIC_STRING_SET_FLOAT_64_UL = "setFloat64"
 LIT_MAGIC_STRING_SET_MINUTES_UL = "setMinutes"
