Add --test262-esnext option to run-tests.py
Changes:
- Imported and unified test262 test harness for ES2015 and ESNext
- Simplified runner scripts accordingly
- Run tests on CI to be able detect regressions and progressions too

JerryScript-DCO-1.0-Signed-off-by: Csaba Osztrogonác csaba.osztrogonac@h-lab.eu

--- a/.github/workflows/gh-actions.yml
+++ b/.github/workflows/gh-actions.yml
@@ -74,6 +74,13 @@ jobs:
       - name: Test262 - ES2015
         run: $RUNNER --test262-es2015 update
 
+  Conformance_Tests_ESNext:
+    runs-on: ubuntu-18.04
+    steps:
+      - uses: actions/checkout@v1
+      - name: Test262 - ESNext
+        run: $RUNNER --test262-esnext update
+
   Unit_Tests:
     runs-on: ubuntu-18.04
     steps:
