Implement BigInt64 and BigUint64 typedArrays
Also implemented ToBigInt conversion method based on ECMA-262 v11, 7.1.13

JerryScript-DCO-1.0-Signed-off-by: Adam Szilagyi aszilagy@inf.u-szeged.hu

--- a/jerry-core/lit/lit-magic-strings.ini
+++ b/jerry-core/lit/lit-magic-strings.ini
@@ -330,6 +330,7 @@ LIT_MAGIC_STRING_IS_EXTENSIBLE = "isExtensible"
 LIT_MAGIC_STRING_TO_DATE_STRING_UL = "toDateString"
 LIT_MAGIC_STRING_TO_TIME_STRING_UL = "toTimeString"
 LIT_MAGIC_STRING_ASYNC_FUNCTION_UL = "AsyncFunction"
+LIT_MAGIC_STRING_BIGINT64_ARRAY_UL = "BigInt64Array"
 LIT_MAGIC_STRING_ASYNC_ITERATOR = "asyncIterator"
 LIT_MAGIC_STRING_GET_UTC_MINUTES_UL = "getUTCMinutes"
 LIT_MAGIC_STRING_GET_UTC_SECONDS_UL = "getUTCSeconds"
@@ -341,6 +342,7 @@ LIT_MAGIC_STRING_SET_UTC_SECONDS_UL = "setUTCSeconds"
 LIT_MAGIC_STRING_TO_EXPONENTIAL_UL = "toExponential"
 LIT_MAGIC_STRING_ARRAY_ITERATOR_UL = "Array Iterator"
 LIT_MAGIC_STRING_ASYNC_GENERATOR_UL = "AsyncGenerator"
+LIT_MAGIC_STRING_BIGUINT64_ARRAY_UL = "BigUint64Array"
 LIT_MAGIC_STRING_REFERENCE_ERROR_UL = "ReferenceError"
 LIT_MAGIC_STRING_DEFINE_PROPERTY_UL = "defineProperty"
 LIT_MAGIC_STRING_DELETE_PROPERTY_UL = "deleteProperty"
