Implement DataView.prototype.{set, get}Big{U}int64 methods
The algorithms are based on:
- ECMA-262 v11, 24.3.4.5
- ECMA-262 v11, 24.3.4.6
- ECMA-262 v11, 24.3.4.15
- ECMA-262 v11, 24.3.4.16

JerryScript-DCO-1.0-Signed-off-by: Adam Szilagyi aszilagy@inf.u-szeged.hu

--- a/jerry-core/lit/lit-magic-strings.ini
+++ b/jerry-core/lit/lit-magic-strings.ini
@@ -304,12 +304,14 @@ LIT_MAGIC_STRING_UINT32_ARRAY_UL = "Uint32Array"
 LIT_MAGIC_STRING_CONSTRUCTOR = "constructor"
 LIT_MAGIC_STRING_CODE_POINT_AT = "codePointAt"
 LIT_MAGIC_STRING_OBJECT_FROM_ENTRIES = "fromEntries"
+LIT_MAGIC_STRING_GET_BIGINT64 = "getBigInt64"
 LIT_MAGIC_STRING_GET_FULL_YEAR_UL = "getFullYear"
 LIT_MAGIC_STRING_GET_UTC_HOURS_UL = "getUTCHours"
 LIT_MAGIC_STRING_GET_UTC_MONTH_UL = "getUTCMonth"
 LIT_MAGIC_STRING_HAS_INSTANCE = "hasInstance"
 LIT_MAGIC_STRING_LAST_INDEX_OF_UL = "lastIndexOf"
 LIT_MAGIC_STRING_REDUCE_RIGHT_UL = "reduceRight"
+LIT_MAGIC_STRING_SET_BIGINT64 = "setBigInt64"
 LIT_MAGIC_STRING_SET_FULL_YEAR_UL = "setFullYear"
 LIT_MAGIC_STRING_SET_UTC_HOURS_UL = "setUTCHours"
 LIT_MAGIC_STRING_SET_UTC_MONTH_UL = "setUTCMonth"
@@ -330,7 +332,9 @@ LIT_MAGIC_STRING_MAP_ITERATOR_UL = "Map Iterator"
 LIT_MAGIC_STRING_CONFIGURABLE = "configurable"
 LIT_MAGIC_STRING_FROM_CHAR_CODE_UL = "fromCharCode"
 LIT_MAGIC_STRING_FROM_CODE_POINT_UL = "fromCodePoint"
+LIT_MAGIC_STRING_GET_BIGUINT64 = "getBigUint64"
 LIT_MAGIC_STRING_IS_EXTENSIBLE = "isExtensible"
+LIT_MAGIC_STRING_SET_BIGUINT64 = "setBigUint64"
 LIT_MAGIC_STRING_TO_DATE_STRING_UL = "toDateString"
 LIT_MAGIC_STRING_TO_TIME_STRING_UL = "toTimeString"
 LIT_MAGIC_STRING_ASYNC_FUNCTION_UL = "AsyncFunction"
