--- a/jerry-core/lit/lit-magic-strings.ini
+++ b/jerry-core/lit/lit-magic-strings.ini
@@ -181,6 +181,7 @@ LIT_MAGIC_STRING_BOOLEAN_UL = "Boolean"
 LIT_MAGIC_STRING_FINALLY = "finally"
 LIT_MAGIC_STRING_PROMISE_UL = "Promise"
 LIT_MAGIC_STRING_REFLECT_UL = "Reflect"
+LIT_MAGIC_STRING_SYMBOL_DOT_UL = "Symbol."
 LIT_MAGIC_STRING_SQRT1_2_U = "SQRT1_2"
 LIT_MAGIC_STRING_BOOLEAN = "boolean"
 LIT_MAGIC_STRING_COMPILE = "compile"
@@ -287,6 +288,7 @@ LIT_MAGIC_STRING_GET_FLOAT_64_UL = "getFloat64"
 LIT_MAGIC_STRING_GET_MINUTES_UL = "getMinutes"
 LIT_MAGIC_STRING_GET_SECONDS_UL = "getSeconds"
 LIT_MAGIC_STRING_GET_UTC_DATE_UL = "getUTCDate"
+LIT_MAGIC_STRING_GLOBAL_THIS_UL = "globalThis"
 LIT_MAGIC_STRING_IGNORECASE_UL = "ignoreCase"
 LIT_MAGIC_STRING_PARSE_FLOAT = "parseFloat"
 LIT_MAGIC_STRING_REPLACE_ALL = "replaceAll"
