Drop the minimal variant of the default port implementation
The minimal variant became quite meaningless lately. There were two
port APIs originally that had extra functions in the default port
in addition to the core-mandated implementations: the I/O and
Termination port APIs. However, the extra Termination API code was
removed a year ago, leaving some minimal extension in the I/O port
only. As the overhead of the extension is negligible, it is not
worth maintaining two library variants.

Therefore
- this commit removes the minimal variant of the default port lib,
- rewrites uses of the minimal variant to use the variant with the
  I/O extension, and
- updates targets where I/O port code was copy-n-pasted.

JerryScript-DCO-1.0-Signed-off-by: Akos Kiss akiss@inf.u-szeged.hu

--- a/jerry-main/CMakeLists.txt
+++ b/jerry-main/CMakeLists.txt
@@ -70,7 +70,7 @@ endif()
 
 if(JERRY_CMDLINE_TEST)
   jerry_create_executable("jerry-test" "main-unix-test.c" "benchmarking.c")
-  target_link_libraries("jerry-test" jerry-port-default-minimal)
+  target_link_libraries("jerry-test" jerry-port-default)
   if (JERRY_TEST_STACK_MEASURE)
     target_compile_definitions("jerry-test" PRIVATE -DJERRY_TEST_STACK_MEASURE=1)
   endif()
