Add script to extract JerryScript version from headers
This can be used at configuration time to
- display version in diagnostics, and
- to write proper version number in pkgconfig files.

JerryScript-DCO-1.0-Signed-off-by: Akos Kiss akiss@inf.u-szeged.hu

--- a/jerry-libm/libjerry-libm.pc.in
+++ b/jerry-libm/libjerry-libm.pc.in
@@ -5,6 +5,6 @@ includedir=${prefix}/include/jerry-libm
 Name: libjerry-libm
 Description: JerryScript: lightweight JavaScript engine (minimal math library)
 URL: https://github.com/jerryscript-project/jerryscript
-Version: 1.0
+Version: @JERRY_VERSION@
 Libs: -L${libdir} -ljerry-libm
 Cflags: -I${includedir}
