--- a/jerry-core/libjerry-core.pc.in
+++ b/jerry-core/libjerry-core.pc.in
@@ -5,7 +5,7 @@ includedir=${prefix}/include
 Name: libjerry-core
 Description: JerryScript: lightweight JavaScript engine (core engine library)
 URL: https://github.com/jerryscript-project/jerryscript
-Version: 1.0
+Version: @JERRY_VERSION@
 Requires.private: @JERRY_CORE_PKGCONFIG_REQUIRES@ # NOTE: libjerry-port-default is not added as a required package
 Libs: -L${libdir} -ljerry-core
 Libs.private: @JERRY_CORE_PKGCONFIG_LIBS@
