--- a/jerry-ext/libjerry-ext.pc.in
+++ b/jerry-ext/libjerry-ext.pc.in
@@ -5,7 +5,7 @@ includedir=${prefix}/include
 Name: libjerry-ext
 Description: JerryScript: lightweight JavaScript engine (extensions library)
 URL: https://github.com/jerryscript-project/jerryscript
-Version: 1.0
+Version: @JERRY_VERSION@
 Requires.private: libjerry-core
 Libs: -L${libdir} -ljerry-ext
 Libs.private: @JERRY_EXT_PKGCONFIG_LIBS@
