Run test262-esnext tests with system allocator
There are many tests need more memory than 512Kb,
system allocator is needed to have larger heap.

JerryScript-DCO-1.0-Signed-off-by: Csaba Osztrogonác csaba.osztrogonac@h-lab.eu

--- a/.github/workflows/gh-actions.yml
+++ b/.github/workflows/gh-actions.yml
@@ -92,6 +92,8 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v1
+      - name: Initializtaion
+        run: sudo apt-get install gcc-multilib
       - name: Test262 - ESNext (built-ins,annexB,harness,intl402)
         run: $RUNNER --test262-esnext update --test262-test-list built-ins,annexB,harness,intl402
       - uses: actions/upload-artifact@v2
@@ -104,6 +106,8 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v1
+      - name: Initializtaion
+        run: sudo apt-get install gcc-multilib
       - name: Test262 - ESNext (language)
         run: $RUNNER --test262-esnext update --test262-test-list language
       - uses: actions/upload-artifact@v2
