--- a/.github/workflows/gh-actions.yml
+++ b/.github/workflows/gh-actions.yml
@@ -15,7 +15,13 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       - name: Initializtaion
-        run: sudo apt-get install doxygen vera++ cppcheck pylint pylint python-serial -q
+        run: |
+          sudo apt-get install doxygen vera++ cppcheck python-is-python3 -q
+          sudo pip install pyserial pylint
+      - name: Display Python version
+        run:
+          python -c "import sys; print(sys.version)"
+          /usr/bin/env python -c "import sys; print(sys.version)"
       - name: Signed-off
         run: $RUNNER --check-signed-off=gh-actions
       - name: Doxygen
@@ -80,6 +86,10 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v1
+      - name: Display Python version
+        run: |
+          python -c "import sys; print(sys.version)"
+          /usr/bin/env python -c "import sys; print(sys.version)"
       - name: Test262 - ES2015
         run: $RUNNER --test262-es2015 update
       - uses: actions/upload-artifact@v2
